58-feature-openstudiolandscapes-n8n: initial commit from template

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 # .coveragerc to control coverage.py
 [run]
 branch = True
-source = OpenStudioLandscapes.Template
+source = OpenStudioLandscapes.n8n
 # omit = bad_file.py
 
 [paths]
