--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "gitpython",
     "snakemd",
 ]
-description = "Template Feature for OpenStudioLandscapes"
+description = "n8n Feature for OpenStudioLandscapes"
 dynamic = [
     "version",
 ]
@@ -33,7 +33,7 @@ license-files = [
 maintainers = [
     { email = "michimussato@gmail.com", name = "Michael Mussato" },
 ]
-name = "OpenStudioLandscapes-Template"
+name = "OpenStudioLandscapes-n8n"
 requires-python = ">=3.11"
 
 [project.entry-points]
@@ -44,12 +44,12 @@ coverage = [
     "pytest",
 ]
 dev = [
-    "OpenStudioLandscapes-Template[coverage]",
-    "OpenStudioLandscapes-Template[lint]",
-    "OpenStudioLandscapes-Template[nox]",
-    "OpenStudioLandscapes-Template[readme]",
-    "OpenStudioLandscapes-Template[sbom]",
-    "OpenStudioLandscapes-Template[testing]",
+    "OpenStudioLandscapes-n8n[coverage]",
+    "OpenStudioLandscapes-n8n[lint]",
+    "OpenStudioLandscapes-n8n[nox]",
+    "OpenStudioLandscapes-n8n[readme]",
+    "OpenStudioLandscapes-n8n[sbom]",
+    "OpenStudioLandscapes-n8n[testing]",
 ]
 graphviz = [
     "graphviz",
@@ -62,7 +62,7 @@ lint = [
     "pylint",
 ]
 nox = [
-    "OpenStudioLandscapes-Template[testing]",
+    "OpenStudioLandscapes-n8n[testing]",
     "nox",
 ]
 pyproject = [
@@ -72,7 +72,7 @@ readme = [
     "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git",
 ]
 sbom = [
-    "OpenStudioLandscapes-Template[graphviz]",
+    "OpenStudioLandscapes-n8n[graphviz]",
     "cyclonedx-bom",
 ]
 testing = [
@@ -86,16 +86,16 @@ content-type = "text/markdown; charset=UTF-8"
 file = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/michimussato/OpenStudioLandscapes-Template"
+Homepage = "https://github.com/michimussato/OpenStudioLandscapes-n8n"
 
 [tool.dagster]
-code_location_name = "OpenStudioLandscapes-Template"
-module_name = "OpenStudioLandscapes.Template.definitions"
+code_location_name = "OpenStudioLandscapes-n8n"
+module_name = "OpenStudioLandscapes.n8n.definitions"
 
 [tool.setuptools]
 include-package-data = true
 packages = [
-    "OpenStudioLandscapes.Template",
+    "OpenStudioLandscapes.n8n",
 ]
 platforms = [
     "Linux",
