--- a/pyproject_layer.yaml
+++ b/pyproject_layer.yaml
@@ -1,25 +1,25 @@
 project:
   # dependencies: []
-  description: Template Feature for OpenStudioLandscapes
-  name: OpenStudioLandscapes-Template
+  description: n8n Feature for OpenStudioLandscapes
+  name: OpenStudioLandscapes-n8n
   optional-dependencies:
     dev:
-    - OpenStudioLandscapes-Template[testing]
-    - OpenStudioLandscapes-Template[lint]
-    - OpenStudioLandscapes-Template[nox]
-    - OpenStudioLandscapes-Template[sbom]
-    - OpenStudioLandscapes-Template[coverage]
-    - OpenStudioLandscapes-Template[readme]
+    - OpenStudioLandscapes-n8n[testing]
+    - OpenStudioLandscapes-n8n[lint]
+    - OpenStudioLandscapes-n8n[nox]
+    - OpenStudioLandscapes-n8n[sbom]
+    - OpenStudioLandscapes-n8n[coverage]
+    - OpenStudioLandscapes-n8n[readme]
     nox:
-    - OpenStudioLandscapes-Template[testing]
+    - OpenStudioLandscapes-n8n[testing]
     sbom:
-    - OpenStudioLandscapes-Template[graphviz]
+    - OpenStudioLandscapes-n8n[graphviz]
   urls:
-    Homepage: https://github.com/michimussato/OpenStudioLandscapes-Template
+    Homepage: https://github.com/michimussato/OpenStudioLandscapes-n8n
 tool:
   dagster:
-    code_location_name: OpenStudioLandscapes-Template
-    module_name: OpenStudioLandscapes.Template.definitions
+    code_location_name: OpenStudioLandscapes-n8n
+    module_name: OpenStudioLandscapes.n8n.definitions
   setuptools:
     packages:
-    - OpenStudioLandscapes.Template
+    - OpenStudioLandscapes.n8n
